/**
 * Tier-2.5 render scenarios for Untangle: drive a real `Midend` to a
 * fixed board and capture `redraw`. Targeted op assertions (edges,
 * crossed-edge red, vertices) plus a `toMatchSnapshot` so a render
 * regression is a reviewable text diff. `vitest -u` re-baselines an
 * intended change — keep the targeted assertions so a careless `-u`
 * can't silently erase the guarantee.
 *
 * The opener frame is reached via `renderScenario`; the mid-drag frame
 * is reached by driving the returned midend's `processInput` (a real
 * mouse-down + drag), the only way to populate the live drag UI state.
 */

import { describe, expect, it } from "vitest";
import { Midend } from "../../engine/index.ts";
import { LEFT_BUTTON, LEFT_DRAG } from "../../engine/pointer.ts";
import { randomNew } from "../../engine/random/index.ts";
import { RecordingDrawing } from "../../engine/testing/recording-drawing.ts";
import {
  DEFAULT_BACKGROUND,
  renderScenario,
} from "../../engine/testing/render-scenario.ts";
import { newUntangleDesc } from "./generator.ts";
import { deduceUntangleHintPlan, type UntangleHint } from "./hint.ts";
import { untangleGame } from "./index.ts";
import {
  COL_CROSSEDLINE,
  COL_DRAGPOINT,
  COL_HINT,
  COL_LINE,
  COL_OUTLINE,
  COL_POINT,
} from "./render.ts";
import { coordLimit, makeCircle } from "./state.ts";

/** A fixed descriptive board → a stable frame for snapshotting. */
function fixedBoard(n: number, seed: string): string {
  const { desc } = newUntangleDesc({ n }, randomNew(seed));
  return `${n}:${desc}`;
}

describe("Untangle render scenarios", () => {
  it("opener frame: edges, crossed-edge red, and all vertices drawn", () => {
    const n = 10;
    const id = fixedBoard(n, "untangle-render-opener");
    const { recording, size } = renderScenario({ game: untangleGame, id });

    const lines = recording.ops.filter((o) => o.op === "line");
    // Plain edges and at least one crossed (red) edge — the board starts
    // tangled and show-crossed-edges defaults ON.
    expect(lines.some((o) => o.color === COL_LINE)).toBe(true);
    expect(lines.some((o) => o.color === COL_CROSSEDLINE)).toBe(true);

    // Every vertex is drawn as a COL_POINT blob (none is being dragged).
    const pointBlobs = recording.ops.filter(
      (o) => o.op === "circle" && o.fill === COL_POINT,
    );
    expect(pointBlobs.length).toBe(n);

    // The playable-area border is drawn (4 COL_OUTLINE frame lines).
    const borderLines = recording.ops.filter(
      (o) => o.op === "line" && o.color === COL_OUTLINE,
    );
    expect(borderLines.length).toBe(4);

    // Square board at the preferred tile size.
    const ts = untangleGame.preferredTileSize ?? 32;
    expect(size).toEqual({ w: coordLimit(n) * ts, h: coordLimit(n) * ts });

    expect(recording.ops).toMatchSnapshot();
  });

  it("mid-drag frame: the grabbed vertex renders as COL_DRAGPOINT", () => {
    const n = 10;
    const id = fixedBoard(n, "untangle-render-drag");
    const { midend, palette } = renderScenario({ game: untangleGame, id });

    // Mouse-down exactly on vertex 0's pixel (circle layout, d = tileSize
    // so the rational coordinate is already the pixel), then drag it.
    const ts = untangleGame.preferredTileSize ?? 32;
    const v0 = makeCircle(n, coordLimit(n))[0];
    const vx = Math.trunc((v0.x * ts) / v0.d);
    const vy = Math.trunc((v0.y * ts) / v0.d);
    expect(midend.processInput(vx, vy, LEFT_BUTTON)).toBe(true);
    expect(midend.processInput(vx + 30, vy + 40, LEFT_DRAG)).toBe(true);

    const rec = new RecordingDrawing(palette);
    midend.redraw(rec);

    // Exactly one vertex (the grabbed one) is the white drag point.
    const dragBlobs = rec.ops.filter(
      (o) => o.op === "circle" && o.fill === COL_DRAGPOINT,
    );
    expect(dragBlobs.length).toBe(1);

    expect(rec.ops).toMatchSnapshot();
  });

  it("hint frame: a COL_HINT line + destination marker are drawn", () => {
    const n = 10;
    const id = fixedBoard(n, "untangle-render-hint");
    const { recording, hint } = renderScenario({
      game: untangleGame,
      id,
      showHint: true,
    });

    // The displayed step targets a vertex and a destination.
    expect(hint?.highlights).toBeDefined();

    // A COL_HINT line (the move suggestion) and a COL_HINT marker circle
    // at the destination.
    expect(recording.ops.some((o) => o.op === "line" && o.color === COL_HINT)).toBe(
      true,
    );
    expect(recording.ops.some((o) => o.op === "circle" && o.fill === COL_HINT)).toBe(
      true,
    );

    // Each crossing the step removes gets an unfilled two-stroke ring.
    const cleared = (hint?.highlights as UntangleHint | undefined)?.cleared ?? [];
    expect(cleared.length).toBeGreaterThan(0);
    const rings = recording.ops.filter(
      (o) => o.op === "circle" && o.fill === -1 && o.outline === COL_HINT,
    );
    expect(rings).toHaveLength(2 * cleared.length);

    expect(recording.ops).toMatchSnapshot();
  });

  it("journey frame: the marked points still to move are ringed", () => {
    // The owner's board, followed by hint until a plan is a journey.
    const seed = "343769d2db4f418cccd3b79e00c975d0";
    const { desc, aux } = untangleGame.newDesc({ n: 20 }, randomNew(seed));
    let s = untangleGame.newState({ n: 20 }, desc);
    const moves = [];
    for (;;) {
      const res = deduceUntangleHintPlan(s, aux);
      if (!res.ok) throw new Error(res.error);
      if ((res.steps[0].highlights?.marked.length ?? 0) > 0) break;
      for (const st of res.steps) {
        moves.push(st.move);
        s = untangleGame.executeMove(s, st.move);
      }
      if (moves.length > 40) throw new Error("no journey on the owner's board");
    }

    const { recording, hint } = renderScenario({
      game: untangleGame,
      id: `20#${seed}`,
      moves,
      showHint: true,
    });
    const h = hint?.highlights as UntangleHint | undefined;
    const marked = h?.marked ?? [];
    expect(marked.length).toBeGreaterThan(0);
    expect(marked).not.toContain(h?.vertex);

    // A two-stroke ring on each marked point, centered on it, besides the
    // rings on the crossings the step removes.
    const rings = recording.ops.filter(
      (o) => o.op === "circle" && o.fill === -1 && o.outline === COL_HINT,
    );
    expect(rings).toHaveLength(2 * (marked.length + (h?.cleared.length ?? 0)));
    const ts = untangleGame.preferredTileSize ?? 32;
    for (const v of marked) {
      const p = s.pts[v];
      const at = { x: Math.trunc((p.x * ts) / p.d), y: Math.trunc((p.y * ts) / p.d) };
      expect(
        rings.filter((o) => o.op === "circle" && o.cx === at.x && o.cy === at.y),
      ).toHaveLength(2);
    }

    expect(recording.ops).toMatchSnapshot();
  });

  it("toggling show-crossed-edges off repaints with no red edges (regression)", () => {
    // A pref change moves none of the render early-out's keys (positions,
    // bg, cursor), so a plain repaint would be skipped by the per-frame
    // cache. The midend drops the drawstate on setPreferences so the next
    // redraw repaints from scratch — this asserts that path end to end.
    const n = 10;
    const id = fixedBoard(n, "untangle-render-crossed-toggle");
    // A fresh midend (not renderScenario, which already painted once and
    // would leave the early-out armed) so the first `before` redraw is a
    // full paint.
    const midend = new Midend(untangleGame);
    midend.setCallbacks(
      () => {},
      () => {},
      () => {},
    );
    midend.newGameFromId(id);
    const palette = untangleGame.colors(DEFAULT_BACKGROUND);

    const before = new RecordingDrawing(palette);
    midend.redraw(before);
    expect(before.ops.some((o) => o.op === "line" && o.color === COL_CROSSEDLINE)).toBe(
      true,
    );

    midend.setPreferences({ "show-crossed-edges": false });
    const after = new RecordingDrawing(palette);
    midend.redraw(after);
    // No edge is red now; every edge is the plain line color.
    expect(after.ops.some((o) => o.op === "line" && o.color === COL_CROSSEDLINE)).toBe(
      false,
    );
    expect(after.ops.some((o) => o.op === "line" && o.color === COL_LINE)).toBe(true);
  });
});
