// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Untangle render scenarios > hint frame: a COL_HINT line + destination marker are drawn 1`] = `
[
  {
    "color": 0,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(168, 168, 168)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "color": 1,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(211, 211, 211)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 317,
    "y1": 2,
    "y2": 2,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 317,
    "y1": 2,
    "y2": 317,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 2,
    "y1": 317,
    "y2": 317,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 2,
    "y1": 317,
    "y2": 2,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 241,
    "y1": 23,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 160,
    "y1": 23,
    "y2": 297,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 23,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 23,
    "y2": 118,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 290,
    "y1": 49,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 290,
    "y1": 49,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 49,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 241,
    "y1": 118,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 118,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 118,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 160,
    "y1": 202,
    "y2": 297,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 202,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 202,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 271,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 297,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 79,
    "x2": 79,
    "y1": 271,
    "y2": 49,
  },
  {
    "cx": 160,
    "cy": 23,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 160,
    "cy": 297,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 175,
    "cy": 70,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 175,
    "cy": 70,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 168,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 168,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 179,
    "cy": 81,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 179,
    "cy": 81,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 196,
    "cy": 134,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 196,
    "cy": 134,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 160,
    "cy": 75,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 160,
    "cy": 75,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 160,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 160,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 160,
    "cy": 75,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 160,
    "cy": 75,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 160,
    "cy": 107,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 160,
    "cy": 107,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 160,
    "cy": 212,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 160,
    "cy": 212,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 110,
    "cy": 91,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 110,
    "cy": 91,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 141,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 141,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 129,
    "cy": 65,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 129,
    "cy": 65,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 119,
    "cy": 78,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 119,
    "cy": 78,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 69,
    "cy": 146,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 69,
    "cy": 146,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 124,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 124,
    "cy": 49,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 110,
    "cy": 59,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 110,
    "cy": 59,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 101,
    "cy": 65,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 101,
    "cy": 65,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "color": 10,
    "op": "line",
    "rgb": "rgb(232, 139, 33)",
    "thickness": 2,
    "x1": 160,
    "x2": 102,
    "y1": 23,
    "y2": 199,
  },
  {
    "cx": 102,
    "cy": 199,
    "fill": 10,
    "fillRgb": "rgb(232, 139, 33)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 160,
    "cy": 23,
    "fill": 10,
    "fillRgb": "rgb(232, 139, 33)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
]
`;

exports[`Untangle render scenarios > journey frame: the marked points still to move are ringed 1`] = `
[
  {
    "color": 0,
    "h": 448,
    "op": "rect",
    "rgb": "rgb(168, 168, 168)",
    "w": 448,
    "x": 0,
    "y": 0,
  },
  {
    "color": 1,
    "h": 448,
    "op": "rect",
    "rgb": "rgb(211, 211, 211)",
    "w": 448,
    "x": 0,
    "y": 0,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 445,
    "y1": 2,
    "y2": 2,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 445,
    "x2": 445,
    "y1": 2,
    "y2": 445,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 445,
    "x2": 2,
    "y1": 445,
    "y2": 445,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 2,
    "y1": 445,
    "y2": 2,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 391,
    "x2": 280,
    "y1": 45,
    "y2": 45,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 391,
    "x2": 407,
    "y1": 45,
    "y2": 165,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 391,
    "x2": 327,
    "y1": 45,
    "y2": 77,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 216,
    "x2": 379,
    "y1": 284,
    "y2": 337,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 216,
    "x2": 248,
    "y1": 284,
    "y2": 220,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 216,
    "x2": 168,
    "y1": 284,
    "y2": 284,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 224,
    "x2": 280,
    "y1": 35,
    "y2": 45,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 224,
    "x2": 407,
    "y1": 35,
    "y2": 165,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 224,
    "x2": 152,
    "y1": 35,
    "y2": 140,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 224,
    "x2": 111,
    "y1": 35,
    "y2": 69,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 280,
    "x2": 327,
    "y1": 45,
    "y2": 77,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 280,
    "x2": 111,
    "y1": 45,
    "y2": 69,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 407,
    "x2": 327,
    "y1": 165,
    "y2": 77,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 416,
    "x2": 379,
    "y1": 224,
    "y2": 337,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 416,
    "x2": 248,
    "y1": 224,
    "y2": 220,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 416,
    "x2": 248,
    "y1": 224,
    "y2": 156,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 416,
    "x2": 280,
    "y1": 224,
    "y2": 124,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 73,
    "x2": 337,
    "y1": 411,
    "y2": 379,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 73,
    "x2": 111,
    "y1": 411,
    "y2": 379,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 73,
    "x2": 32,
    "y1": 411,
    "y2": 224,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 379,
    "x2": 248,
    "y1": 337,
    "y2": 220,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 337,
    "x2": 105,
    "y1": 379,
    "y2": 284,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 337,
    "x2": 111,
    "y1": 379,
    "y2": 379,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 337,
    "x2": 168,
    "y1": 379,
    "y2": 284,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 248,
    "x2": 168,
    "y1": 220,
    "y2": 284,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 327,
    "x2": 32,
    "y1": 77,
    "y2": 224,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 105,
    "x2": 32,
    "y1": 284,
    "y2": 224,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 105,
    "x2": 152,
    "y1": 284,
    "y2": 220,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 105,
    "x2": 111,
    "y1": 284,
    "y2": 69,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 111,
    "x2": 32,
    "y1": 379,
    "y2": 224,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 152,
    "x2": 248,
    "y1": 140,
    "y2": 156,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 152,
    "x2": 152,
    "y1": 140,
    "y2": 220,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 152,
    "x2": 280,
    "y1": 140,
    "y2": 124,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 168,
    "x2": 152,
    "y1": 284,
    "y2": 220,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 248,
    "x2": 280,
    "y1": 156,
    "y2": 124,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 152,
    "x2": 111,
    "y1": 220,
    "y2": 69,
  },
  {
    "cx": 391,
    "cy": 45,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 216,
    "cy": 284,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 224,
    "cy": 35,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 280,
    "cy": 45,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 407,
    "cy": 165,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 416,
    "cy": 224,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 73,
    "cy": 411,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 379,
    "cy": 337,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 337,
    "cy": 379,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 248,
    "cy": 220,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 327,
    "cy": 77,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 105,
    "cy": 284,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 111,
    "cy": 379,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 152,
    "cy": 140,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 168,
    "cy": 284,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 32,
    "cy": 224,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 248,
    "cy": 156,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 152,
    "cy": 220,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 111,
    "cy": 69,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 280,
    "cy": 124,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 107,
    "cy": 186,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 107,
    "cy": 186,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 188,
    "cy": 146,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 188,
    "cy": 146,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 152,
    "cy": 164,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 152,
    "cy": 164,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 216,
    "cy": 131,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 216,
    "cy": 131,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 138,
    "cy": 170,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 138,
    "cy": 170,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 111,
    "cy": 69,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 111,
    "cy": 69,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 280,
    "cy": 45,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 280,
    "cy": 45,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 327,
    "cy": 77,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 327,
    "cy": 77,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 407,
    "cy": 165,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 407,
    "cy": 165,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "cx": 391,
    "cy": 45,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 9,
  },
  {
    "cx": 391,
    "cy": 45,
    "fill": -1,
    "fillRgb": "color#-1",
    "op": "circle",
    "outline": 10,
    "outlineRgb": "rgb(232, 139, 33)",
    "r": 10,
  },
  {
    "color": 10,
    "op": "line",
    "rgb": "rgb(232, 139, 33)",
    "thickness": 2,
    "x1": 32,
    "x2": 92,
    "y1": 224,
    "y2": 338,
  },
  {
    "cx": 92,
    "cy": 338,
    "fill": 10,
    "fillRgb": "rgb(232, 139, 33)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 32,
    "cy": 224,
    "fill": 10,
    "fillRgb": "rgb(232, 139, 33)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
]
`;

exports[`Untangle render scenarios > mid-drag frame: the grabbed vertex renders as COL_DRAGPOINT 1`] = `
[
  {
    "color": 1,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(211, 211, 211)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 317,
    "y1": 2,
    "y2": 2,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 317,
    "y1": 2,
    "y2": 317,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 2,
    "y1": 317,
    "y2": 317,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 2,
    "y1": 317,
    "y2": 2,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 190,
    "x2": 290,
    "y1": 63,
    "y2": 202,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 190,
    "x2": 79,
    "y1": 63,
    "y2": 49,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 290,
    "y1": 49,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 241,
    "y1": 49,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 49,
    "y2": 118,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 290,
    "x2": 290,
    "y1": 118,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 241,
    "y1": 118,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 160,
    "y1": 118,
    "y2": 297,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 202,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 202,
    "y2": 49,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 241,
    "x2": 160,
    "y1": 271,
    "y2": 297,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 297,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 79,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 79,
    "x2": 79,
    "y1": 271,
    "y2": 49,
  },
  {
    "cx": 241,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 160,
    "cy": 297,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 202,
    "fill": 8,
    "fillRgb": "rgb(165, 195, 239)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 49,
    "fill": 8,
    "fillRgb": "rgb(165, 195, 239)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 190,
    "cy": 63,
    "fill": 6,
    "fillRgb": "rgb(33, 167, 73)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
]
`;

exports[`Untangle render scenarios > opener frame: edges, crossed-edge red, and all vertices drawn 1`] = `
[
  {
    "color": 0,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(168, 168, 168)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "color": 1,
    "h": 320,
    "op": "rect",
    "rgb": "rgb(211, 211, 211)",
    "w": 320,
    "x": 0,
    "y": 0,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 317,
    "y1": 2,
    "y2": 2,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 317,
    "y1": 2,
    "y2": 317,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 317,
    "x2": 2,
    "y1": 317,
    "y2": 317,
  },
  {
    "color": 4,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 2,
    "x2": 2,
    "y1": 317,
    "y2": 2,
  },
  {
    "color": 2,
    "op": "line",
    "rgb": "rgb(0, 0, 0)",
    "thickness": 1,
    "x1": 160,
    "x2": 241,
    "y1": 23,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 241,
    "y1": 23,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 23,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 160,
    "y1": 49,
    "y2": 297,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 79,
    "y1": 49,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 160,
    "y1": 118,
    "y2": 297,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 118,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 118,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 79,
    "y1": 202,
    "y2": 271,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 290,
    "x2": 30,
    "y1": 202,
    "y2": 202,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 241,
    "x2": 30,
    "y1": 271,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 30,
    "y1": 297,
    "y2": 118,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 160,
    "x2": 79,
    "y1": 297,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 79,
    "x2": 79,
    "y1": 271,
    "y2": 49,
  },
  {
    "color": 3,
    "op": "line",
    "rgb": "rgb(223, 34, 37)",
    "thickness": 1,
    "x1": 30,
    "x2": 79,
    "y1": 202,
    "y2": 49,
  },
  {
    "cx": 160,
    "cy": 23,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 290,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 241,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 160,
    "cy": 297,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 271,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 202,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 30,
    "cy": 118,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
  {
    "cx": 79,
    "cy": 49,
    "fill": 5,
    "fillRgb": "rgb(21, 113, 233)",
    "op": "circle",
    "outline": 4,
    "outlineRgb": "rgb(0, 0, 0)",
    "r": 6,
  },
]
`;
